--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -1,70 +1,97 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main_DDL\n",
+    "---\n",
+    "## This file is responsible for reading the raw data, cleaning it, and transforming the data into SQL files for implementation in the server containing the database\n",
+    "\n",
+    "### Import Statements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import os\n",
-    "from myMethods import iter_file_paths, generate_ddl_from_file, process_txt_file"
+    "from myMethods import iter_file_paths, generate_ddl_from_file, process_txt_file, parse_FC_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading and Cleaning Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully processed: Ar76c.txt\n",
-      "Successfully processed: Ar76f.txt\n",
-      "Successfully processed: AR79C.TXT\n",
-      "Successfully processed: AR79F.TXT\n",
-      "Successfully processed: AR80C.TXT\n",
-      "Successfully processed: AR80F.TXT\n",
-      "Successfully processed: AR83C.TXT\n",
-      "Successfully processed: AR83F.TXT\n",
-      "Successfully processed: AR85C.TXT\n",
-      "Successfully processed: AR85F.TXT\n",
-      "Successfully processed: AR87C.TXT\n",
-      "Successfully processed: AR87F.TXT\n",
-      "Successfully processed: AR91C.TXT\n",
-      "Successfully processed: AR91F.TXT\n",
-      "Successfully processed: AR95C.TXT\n",
-      "Successfully processed: AR95F.TXT\n",
-      "Error processing ar_1975_constituinte.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1976.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1979_intercalar.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1980.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1983.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1985.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1987.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1991.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1995.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1999.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2002.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2005.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2009.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2011.xls: Unsupported file format. This function only processes .txt files.\n"
+      "Error processing Ar76c.txt: Error saving Excel file: [Errno 13] Permission denied: './Data_Selected/Ar76c.xlsx'\n",
+      "Error processing Ar76c.xlsx: Unsupported file format. This function only processes .txt files.\n",
+      "Successfully processed: ar76f.txt\n",
+      "Error processing Ar76f.xlsx: Unsupported file format. This function only processes .txt files.\n",
+      "Successfully processed: ar79c.txt\n",
+      "Successfully processed: ar79f.txt\n",
+      "Successfully processed: ar80c.txt\n",
+      "Successfully processed: ar80f.txt\n",
+      "Successfully processed: ar83c.txt\n",
+      "Successfully processed: ar83f.txt\n",
+      "Successfully processed: ar85c.txt\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file_path \u001b[38;5;129;01min\u001b[39;00m iter_file_paths(DATA_dir):\n\u001b[32m      6\u001b[39m     \u001b[38;5;66;03m## Create a df from the file\u001b[39;00m\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m         df = \u001b[43mprocess_txt_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDATA_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_encoding\u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcp1252\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_write\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m         filename = os.path.basename(file_path).lower()\n\u001b[32m     10\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSuccessfully processed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tiago\\OneDrive\\Academia\\FEUP\\MECD\\Armazéns de Dados\\Lab Assignment\\application\\PTElections_DW\\myMethods.py:72\u001b[39m, in \u001b[36mprocess_txt_file\u001b[39m\u001b[34m(source_path, target_dir, _encoding, _write)\u001b[39m\n\u001b[32m     69\u001b[39m output_file = os.path.join(target_dir, base_name + \u001b[33m\"\u001b[39m\u001b[33m.xlsx\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     70\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     71\u001b[39m     \u001b[38;5;66;03m## Save the DataFrame to an Excel file\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m     \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_excel\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheader\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     73\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     74\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mError saving Excel file: \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(e))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tiago\\OneDrive\\Academia\\FEUP\\MECD\\Armazéns de Dados\\Lab Assignment\\application\\.venv\\Lib\\site-packages\\pandas\\util\\_decorators.py:333\u001b[39m, in \u001b[36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    327\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) > num_allow_args:\n\u001b[32m    328\u001b[39m     warnings.warn(\n\u001b[32m    329\u001b[39m         msg.format(arguments=_format_argument_list(allow_args)),\n\u001b[32m    330\u001b[39m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[32m    331\u001b[39m         stacklevel=find_stack_level(),\n\u001b[32m    332\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m333\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tiago\\OneDrive\\Academia\\FEUP\\MECD\\Armazéns de Dados\\Lab Assignment\\application\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py:2417\u001b[39m, in \u001b[36mNDFrame.to_excel\u001b[39m\u001b[34m(self, excel_writer, sheet_name, na_rep, float_format, columns, header, index, index_label, startrow, startcol, engine, merge_cells, inf_rep, freeze_panes, storage_options, engine_kwargs)\u001b[39m\n\u001b[32m   2404\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mformats\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexcel\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ExcelFormatter\n\u001b[32m   2406\u001b[39m formatter = ExcelFormatter(\n\u001b[32m   2407\u001b[39m     df,\n\u001b[32m   2408\u001b[39m     na_rep=na_rep,\n\u001b[32m   (...)\u001b[39m\u001b[32m   2415\u001b[39m     inf_rep=inf_rep,\n\u001b[32m   2416\u001b[39m )\n\u001b[32m-> \u001b[39m\u001b[32m2417\u001b[39m \u001b[43mformatter\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   2418\u001b[39m \u001b[43m    \u001b[49m\u001b[43mexcel_writer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2419\u001b[39m \u001b[43m    \u001b[49m\u001b[43msheet_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43msheet_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2420\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstartrow\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstartrow\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2421\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstartcol\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstartcol\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2422\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfreeze_panes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfreeze_panes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2423\u001b[39m \u001b[43m    \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m=\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2424\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2425\u001b[39m \u001b[43m    \u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2426\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tiago\\OneDrive\\Academia\\FEUP\\MECD\\Armazéns de Dados\\Lab Assignment\\application\\.venv\\Lib\\site-packages\\pandas\\io\\formats\\excel.py:952\u001b[39m, in \u001b[36mExcelFormatter.write\u001b[39m\u001b[34m(self, writer, sheet_name, startrow, startcol, freeze_panes, engine, storage_options, engine_kwargs)\u001b[39m\n\u001b[32m    949\u001b[39m     need_save = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    951\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m952\u001b[39m     \u001b[43mwriter\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_write_cells\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    953\u001b[39m \u001b[43m        \u001b[49m\u001b[43mformatted_cells\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    954\u001b[39m \u001b[43m        \u001b[49m\u001b[43msheet_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    955\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstartrow\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstartrow\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    956\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstartcol\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstartcol\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    957\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfreeze_panes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfreeze_panes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    958\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    959\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    960\u001b[39m     \u001b[38;5;66;03m# make sure to close opened file handles\u001b[39;00m\n\u001b[32m    961\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m need_save:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tiago\\OneDrive\\Academia\\FEUP\\MECD\\Armazéns de Dados\\Lab Assignment\\application\\.venv\\Lib\\site-packages\\pandas\\io\\excel\\_openpyxl.py:490\u001b[39m, in \u001b[36mOpenpyxlWriter._write_cells\u001b[39m\u001b[34m(self, cells, sheet_name, startrow, startcol, freeze_panes)\u001b[39m\n\u001b[32m    486\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m cells:\n\u001b[32m    487\u001b[39m     xcell = wks.cell(\n\u001b[32m    488\u001b[39m         row=startrow + cell.row + \u001b[32m1\u001b[39m, column=startcol + cell.col + \u001b[32m1\u001b[39m\n\u001b[32m    489\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m490\u001b[39m     xcell.value, fmt = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_value_with_fmt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcell\u001b[49m\u001b[43m.\u001b[49m\u001b[43mval\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    491\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m fmt:\n\u001b[32m    492\u001b[39m         xcell.number_format = fmt\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tiago\\OneDrive\\Academia\\FEUP\\MECD\\Armazéns de Dados\\Lab Assignment\\application\\.venv\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:1293\u001b[39m, in \u001b[36mExcelWriter._value_with_fmt\u001b[39m\u001b[34m(self, val)\u001b[39m\n\u001b[32m   1290\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mMust pass explicit sheet_name or set _cur_sheet property\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   1291\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m sheet_name\n\u001b[32m-> \u001b[39m\u001b[32m1293\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_value_with_fmt\u001b[39m(\n\u001b[32m   1294\u001b[39m     \u001b[38;5;28mself\u001b[39m, val\n\u001b[32m   1295\u001b[39m ) -> \u001b[38;5;28mtuple\u001b[39m[\n\u001b[32m   1296\u001b[39m     \u001b[38;5;28mint\u001b[39m | \u001b[38;5;28mfloat\u001b[39m | \u001b[38;5;28mbool\u001b[39m | \u001b[38;5;28mstr\u001b[39m | datetime.datetime | datetime.date, \u001b[38;5;28mstr\u001b[39m | \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1297\u001b[39m ]:\n\u001b[32m   1298\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   1299\u001b[39m \u001b[33;03m    Convert numpy types to Python types for the Excel writers.\u001b[39;00m\n\u001b[32m   1300\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   1309\u001b[39m \u001b[33;03m        being an optional format\u001b[39;00m\n\u001b[32m   1310\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m   1311\u001b[39m     fmt = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
-    "# Directory containing the data files\n",
-    "DATA_dir = './Data_Selected'  # You'll update this path later\n",
+    "## Directory containing the data files\n",
+    "DATA_dir = './Data_Selected/'\n",
     "\n",
-    "# Loop through every file in the data directory\n",
+    "## Loop through every file in the data directory\n",
     "for file_path in iter_file_paths(DATA_dir):\n",
+    "    ## Create a df from the file\n",
     "    try:\n",
-    "        df = process_txt_file(file_path, DATA_dir, _encoding= 'cp1252')\n",
-    "        print(f\"Successfully processed: {os.path.basename(file_path)}\")\n",
+    "        df = process_txt_file(file_path, DATA_dir, _encoding= 'cp1252', _write=True)\n",
+    "        filename = os.path.basename(file_path).lower()\n",
+    "        print(f\"Successfully processed: {filename}\")\n",
+    "    ## If the file is not a valid text file, skip it\n",
     "    except Exception as e:\n",
-    "        print(f\"Error processing {os.path.basename(file_path)}: {e}\")"
+    "        print(f\"Error processing {os.path.basename(file_path)}: {e}\")\n",
+    "    # parse_FC_data(df).to_excel(file_path.replace('.txt', '.xlsx'), header=False, index=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating SQL DDL/DML scripts to transform the raw excel data into SQL tables"
    ]
   },
   {
@@ -395,31 +422,17 @@
     }
    ],
    "source": [
-    "_, test_sql_ddl = generate_ddl_from_file('../OriginalMAIdata/ar_1999.xls')\n",
-    "print(test_sql_ddl)\n",
-    "ddl_path = './sql_scripts/ddl_script.sql'\n",
-    "with open(ddl_path, 'w') as f:\n",
-    "    f.write(test_sql_ddl)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "242"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "994 - (994 // 376) * 376"
+    "## Directory containing the data files\n",
+    "DATA_dir = './Data_Selected/'\n",
+    "output_dir= './testing_directory/'\n",
+    "\n",
+    "try:\n",
+    "    df = process_txt_file(file_path, output_dir, _encoding= 'cp1252', _write=True)\n",
+    "    filename = os.path.basename(file_path).lower()\n",
+    "    print(f\"Successfully processed: {filename}\")\n",
+    "## If the file is not a valid text file, skip it\n",
+    "except Exception as e:\n",
+    "    print(f\"Error processing {os.path.basename(file_path)}: {e}\")"
    ]
   }
  ],
