--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -34,86 +34,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully processed: Ar76c.txt\n",
-      "Successfully cleaned: Ar76c.txt\n",
-      "Error processing ar76c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: Ar76f.txt\n",
-      "Successfully cleaned: Ar76f.txt\n",
-      "Error processing ar76f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR79C.TXT\n",
-      "Successfully cleaned: AR79C.TXT\n",
-      "Error processing ar79c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR79F.TXT\n",
-      "Successfully cleaned: AR79F.TXT\n",
-      "Error processing ar79f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR80C.TXT\n",
-      "Successfully cleaned: AR80C.TXT\n",
-      "Error processing ar80c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR80F.TXT\n",
-      "Successfully cleaned: AR80F.TXT\n",
-      "Error processing ar80f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR83C.TXT\n",
-      "Successfully cleaned: AR83C.TXT\n",
-      "Error processing ar83c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR83F.TXT\n",
-      "Successfully cleaned: AR83F.TXT\n",
-      "Error processing ar83f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR85C.TXT\n",
-      "Successfully cleaned: AR85C.TXT\n",
-      "Error processing ar85c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR85F.TXT\n",
-      "Successfully cleaned: AR85F.TXT\n",
-      "Error processing ar85f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR87C.TXT\n",
-      "Successfully cleaned: AR87C.TXT\n",
-      "Error processing ar87c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR87F.TXT\n",
-      "Successfully cleaned: AR87F.TXT\n",
-      "Error processing ar87f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR91C.TXT\n",
-      "Successfully cleaned: AR91C.TXT\n",
-      "Error processing ar91c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR91F.TXT\n",
-      "Successfully cleaned: AR91F.TXT\n",
-      "Error processing ar91f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR95C.TXT\n",
-      "Successfully cleaned: AR95C.TXT\n",
-      "Error processing ar95c.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Successfully processed: AR95F.TXT\n",
-      "Successfully cleaned: AR95F.TXT\n",
-      "Error processing ar95f.xlsx: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1975_constituinte.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1976.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1979_intercalar.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1980.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1983.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1985.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1987.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1991.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1995.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_1999.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2002.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2005.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2009.xls: Unsupported file format. This function only processes .txt files.\n",
-      "Error processing ar_2011.xls: Unsupported file format. This function only processes .txt files.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'    \\n## Directory containing the data files\\nDATA_dir = \\'./Data_Selected/\\'\\n_file= \\'AR79C.txt\\'\\noutput_dir= \\'../testing_directory/\\'\\nfile_path = os.path.join(DATA_dir, _file)\\nout_name = os.path.join(output_dir, _file.lower().replace(\\'.txt\\', \\'.xlsx\\'))\\n\\n## testing the process_txt_file function\\ntry:\\n    df = process_txt_file(file_path, _encoding= \\'cp1252\\')\\n    filename = os.path.basename(file_path)\\n    print(f\"Successfully processed: {filename}\")\\n## If the file is not a valid text file, skip it\\nexcept Exception as e:\\n    print(f\"Error processing {os.path.basename(file_path)}: {e}\")\\n## Parse the DataFrame to clean up the data\\ndf = parse_FC_data(df)\\n## Export the DataFrame to an Excel file\\ndf.to_excel(out_name, header=False, index=False)\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Directory containing the data files\n",
     "DATA_dir = './Data_Selected/'\n",
@@ -201,59 +122,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            0     1   2   3     4     5   6    7    8   \\\n",
-      "0                 010101AGADAO     0   0   0   474   429   1    5   AD   \n",
-      "1        010102AGUADA DE BAIXO     0   0   0  1145  1024   4   13   AD   \n",
-      "2         010103AGUADA DE CIMA     0   0   0  2364  2051  11   52   AD   \n",
-      "3                 010104AGUEDA     0   0   0  8189  6954  44  128   AD   \n",
-      "4                  010105BARRO     0   0   0  1083   904   6   19   AD   \n",
-      "...                        ...   ...  ..  ..   ...   ...  ..  ...  ...   \n",
-      "4219  221005SAO ROQUE DO FAIAL     0   0   0   637   582   2    3  NaN   \n",
-      "4220                221006ILHA  5000   0   0     0     0   0    0  NaN   \n",
-      "4221         221101BOA VENTURA     0   0   0  1361  1114   1   18  NaN   \n",
-      "4222       221102PONTA DELGADA     0   0   0   988   813   1   35  NaN   \n",
-      "4223         221103SAO VICENTE     0   0   0  2597  2210   7   68  NaN   \n",
-      "\n",
-      "          9   ...   22   23    24   25   26    27   28    29    30   31  \n",
-      "0      343.0  ...  0.0  PSR   4.0  0.0  UDP   2.0  0.0  UEDS   4.0  0.0  \n",
-      "1      625.0  ...  0.0  PSR   7.0  0.0  UDP  12.0  0.0  UEDS   5.0  0.0  \n",
-      "2     1247.0  ...  0.0  PSR  15.0  0.0  UDP  17.0  0.0  UEDS  14.0  0.0  \n",
-      "3     3206.0  ...  0.0  PSR  24.0  0.0  UDP  79.0  0.0  UEDS  35.0  0.0  \n",
-      "4      467.0  ...  0.0  PSR   5.0  0.0  UDP   9.0  0.0  UEDS   8.0  0.0  \n",
-      "...      ...  ...  ...  ...   ...  ...  ...   ...  ...   ...   ...  ...  \n",
-      "4219     NaN  ...  0.0  PSR   1.0  0.0  UDP   6.0  0.0   NaN   NaN  NaN  \n",
-      "4220     NaN  ...  NaN  NaN   NaN  NaN  NaN   NaN  NaN   NaN   NaN  NaN  \n",
-      "4221     NaN  ...  0.0  PSR   6.0  0.0  UDP   5.0  0.0   NaN   NaN  NaN  \n",
-      "4222     NaN  ...  0.0  PSR   2.0  0.0  UDP  39.0  0.0   NaN   NaN  NaN  \n",
-      "4223     NaN  ...  0.0  PSR  13.0  0.0  UDP  17.0  0.0   NaN   NaN  NaN  \n",
-      "\n",
-      "[4224 rows x 32 columns]\n",
-      "Successfully processed: ar79f.txt\n"
+      "Successfully processed: AR79C.txt\n"
      ]
     }
    ],
    "source": [
     "## Directory containing the data files\n",
     "DATA_dir = './Data_Selected/'\n",
+    "_file= 'AR79C.txt'\n",
     "output_dir= '../testing_directory/'\n",
-    "file_path = os.path.join(DATA_dir, 'AR79F.txt')\n",
+    "file_path = os.path.join(DATA_dir, _file)\n",
+    "out_name = os.path.join(output_dir, _file.lower().replace('.txt', '.xlsx'))\n",
     "\n",
     "## testing the process_txt_file function\n",
     "try:\n",
-    "    df = process_txt_file(file_path, output_dir, _encoding= 'cp1252', _write=True)\n",
+    "    df = process_txt_file(file_path, _encoding= 'cp1252')\n",
     "    filename = os.path.basename(file_path)\n",
     "    print(f\"Successfully processed: {filename}\")\n",
     "## If the file is not a valid text file, skip it\n",
     "except Exception as e:\n",
-<<<<<<< HEAD
     "    print(f\"Error processing {os.path.basename(file_path)}: {e}\")\n",
     "## Parse the DataFrame to clean up the data\n",
     "df = parse_FC_data(df)\n",
     "## Export the DataFrame to an Excel file\n",
     "df.to_excel(out_name, header=False, index=False)\n"
-=======
-    "    print(f\"Error processing {os.path.basename(file_path)}: {e}\")"
->>>>>>> parent of 11c1648 (DATA CLEANING PREPARED)
    ]
   }
  ],
