update and clean
Cleaned up the main files, but the code is still not stable.
Spruced up myMethods, functions are now much more readable.

--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -59,8 +59,7 @@
     "        print(f\"Error processing {os.path.basename(filepath)}: {e}\")\n",
     "    ## Export the DataFrame to an Excel file\n",
     "    with pd.ExcelWriter(out_name, engine='openpyxl', mode='w') as writer: df.to_excel(writer, header=False, index=False)\n",
-    "    print(f\"Successfully exported: {filename} to {out_name}\")\n",
-    "\n"
+    "    print(f\"Successfully exported: {filename} to {out_name}\")\n"
    ]
   },
   {
@@ -72,62 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error processing Ar76c.txt: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar76c.xlsx saved to ./sql_scripts/ddl-dml/ar76c.sql\n",
-      "Error processing Ar76f.txt: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar76f.xlsx saved to ./sql_scripts/ddl-dml/ar76f.sql\n",
-      "Error processing AR79C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar79c.xlsx saved to ./sql_scripts/ddl-dml/ar79c.sql\n",
-      "Error processing AR79F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar79f.xlsx saved to ./sql_scripts/ddl-dml/ar79f.sql\n",
-      "Error processing AR80C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar80c.xlsx saved to ./sql_scripts/ddl-dml/ar80c.sql\n",
-      "Error processing AR80F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar80f.xlsx saved to ./sql_scripts/ddl-dml/ar80f.sql\n",
-      "Error processing AR83C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar83c.xlsx saved to ./sql_scripts/ddl-dml/ar83c.sql\n",
-      "Error processing AR83F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar83f.xlsx saved to ./sql_scripts/ddl-dml/ar83f.sql\n",
-      "Error processing AR85C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar85c.xlsx saved to ./sql_scripts/ddl-dml/ar85c.sql\n",
-      "Error processing AR85F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar85f.xlsx saved to ./sql_scripts/ddl-dml/ar85f.sql\n",
-      "Error processing AR87C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar87c.xlsx saved to ./sql_scripts/ddl-dml/ar87c.sql\n",
-      "Error processing AR87F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar87f.xlsx saved to ./sql_scripts/ddl-dml/ar87f.sql\n",
-      "Error processing AR91C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar91c.xlsx saved to ./sql_scripts/ddl-dml/ar91c.sql\n",
-      "Error processing AR91F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar91f.xlsx saved to ./sql_scripts/ddl-dml/ar91f.sql\n",
-      "Error processing AR95C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar95c.xlsx saved to ./sql_scripts/ddl-dml/ar95c.sql\n",
-      "Error processing AR95F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar95f.xlsx saved to ./sql_scripts/ddl-dml/ar95f.sql\n",
-      "SQL script for ar_1975_constituinte.xls saved to ./sql_scripts/ddl-dml/ar_1975_constituinte.sql\n",
-      "SQL script for ar_1976.xls saved to ./sql_scripts/ddl-dml/ar_1976.sql\n",
-      "SQL script for ar_1979_intercalar.xls saved to ./sql_scripts/ddl-dml/ar_1979_intercalar.sql\n",
-      "SQL script for ar_1980.xls saved to ./sql_scripts/ddl-dml/ar_1980.sql\n",
-      "SQL script for ar_1983.xls saved to ./sql_scripts/ddl-dml/ar_1983.sql\n",
-      "SQL script for ar_1985.xls saved to ./sql_scripts/ddl-dml/ar_1985.sql\n",
-      "SQL script for ar_1987.xls saved to ./sql_scripts/ddl-dml/ar_1987.sql\n",
-      "SQL script for ar_1991.xls saved to ./sql_scripts/ddl-dml/ar_1991.sql\n",
-      "SQL script for ar_1995.xls saved to ./sql_scripts/ddl-dml/ar_1995.sql\n",
-      "SQL script for ar_1999.xls saved to ./sql_scripts/ddl-dml/ar_1999.sql\n",
-      "SQL script for ar_2002.xls saved to ./sql_scripts/ddl-dml/ar_2002.sql\n",
-      "SQL script for ar_2005.xls saved to ./sql_scripts/ddl-dml/ar_2005.sql\n",
-      "SQL script for ar_2009.xls saved to ./sql_scripts/ddl-dml/ar_2009.sql\n",
-      "SQL script for ar_2011.xls saved to ./sql_scripts/ddl-dml/ar_2011.sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Directory containing the data files\n",
     "data_dir = './Data_Selected'\n",
@@ -170,15 +116,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully processed: AR79C.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Directory containing the data files\n",
     "DATA_dir = './Data_Selected/'\n",
