streamlining ETL flow
Now using Claude 3.7 Sonnet kek
myMethods has more, atomized functions, rather than complex functions that may cause problems if inherent assumptions about inputs or output directories aren't met

--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -20,7 +20,15 @@
     "import pandas as pd\n",
     "import os\n",
     "import openpyxl\n",
-    "from myMethods import iter_file_paths, generate_ddl_from_file, process_txt_file, parse_FC_data"
+    "from myMethods import (\n",
+    "    iter_file_paths,\n",
+    "    extract_dataframe_from_txt,\n",
+    "    extract_dataframe_from_excel,\n",
+    "    parse_FC_data, ## may be deprecated\n",
+    "    save_dataframe_to_excel,\n",
+    "    generate_ddl_from_file, ## may be deprecated\n",
+    "    process_txt_file ## will become deprecated\n",
+    ")"
    ]
   },
   {
@@ -118,25 +126,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Directory containing the data files\n",
-    "DATA_dir = './Data_Selected/'\n",
-    "_file= 'AR79C.txt'\n",
-    "output_dir= '../testing_directory/'\n",
-    "file_path = os.path.join(DATA_dir, _file)\n",
-    "out_name = os.path.join(output_dir, _file.lower().replace('.txt', '.xlsx'))\n",
     "\n",
-    "## testing the process_txt_file function\n",
-    "try:\n",
-    "    df = process_txt_file(file_path, _encoding= 'cp1252')\n",
-    "    filename = os.path.basename(file_path)\n",
-    "    print(f\"Successfully processed: {filename}\")\n",
-    "## If the file is not a valid text file, skip it\n",
-    "except Exception as e:\n",
-    "    print(f\"Error processing {os.path.basename(file_path)}: {e}\")\n",
-    "## Parse the DataFrame to clean up the data\n",
-    "df = parse_FC_data(df)\n",
-    "## Export the DataFrame to an Excel file\n",
-    "df.to_excel(out_name, header=False, index=False)\n"
+    "# Define directories\n",
+    "DATA_dir = './Data_Selected/'\n",
+    "extracted_data_dir = './Extracted_Data/'\n",
+    "sql_output_dir = './sql_scripts/ddl-dml/'\n",
+    "\n",
+    "# Create output directories if they don't exist\n",
+    "os.makedirs(extracted_data_dir, exist_ok=True)\n",
+    "os.makedirs(sql_output_dir, exist_ok=True)\n",
+    "\n",
+    "# List to store tuples of (DataFrame, file_type, file_name)\n",
+    "dataframe_infos = []\n",
+    "\n",
+    "# Extract data from all files\n",
+    "for file_path in iter_file_paths(DATA_dir):\n",
+    "    file_name = os.path.basename(file_path)\n",
+    "    base_name, ext = os.path.splitext(file_name)\n",
+    "    \n",
+    "    try:\n",
+    "        # Extract data based on file type\n",
+    "        if ext.lower() == '.txt':\n",
+    "            df = extract_dataframe_from_txt(file_path)\n",
+    "            print(f\"Successfully extracted from text file: {file_name}\")\n",
+    "        elif ext.lower() in ['xls', '.xlsx']:\n",
+    "            df = extract_dataframe_from_excel(file_path)\n",
+    "            print(f\"Successfully extracted from Excel file: {file_name}\")\n",
+    "        else:\n",
+    "            print(f\"Skipping unsupported file: {file_name}\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Store the DataFrame with its metadata\n",
+    "        dataframe_infos.append((df, ext.lower(), base_name))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {file_name}: {e}\")\n",
+    "\n",
+    "# Save all DataFrames to Excel files in the Extracted_Data directory\n",
+    "for df, ext, base_name in dataframe_infos:\n",
+    "    output_path = os.path.join(extracted_data_dir, f\"{base_name}.xlsx\")\n",
+    "    try:\n",
+    "        save_dataframe_to_excel(df, output_path)\n",
+    "        print(f\"Successfully saved: {base_name}.xlsx to Extracted_Data folder\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving {base_name}.xlsx: {e}\")"
    ]
   }
  ],
