data extraction complete
by some miracle, there are exactly 69 changed files. Say it with me now:
"Nice."

--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -127,41 +127,40 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Define directories\n",
-    "DATA_dir = './Data_Selected/'\n",
-    "extracted_data_dir = './Extracted_Data/'\n",
-    "sql_output_dir = './sql_scripts/ddl-dml/'\n",
+    "## Define directories\n",
+    "DATA_dir = './DATA FILES/Source_Data/'\n",
+    "extracted_data_dir = './DATA FILES/Extracted_Data/'\n",
     "\n",
-    "# Create output directories if they don't exist\n",
+    "## Create output directories if they don't exist\n",
     "os.makedirs(extracted_data_dir, exist_ok=True)\n",
-    "os.makedirs(sql_output_dir, exist_ok=True)\n",
     "\n",
-    "# List to store tuples of (DataFrame, file_type, file_name)\n",
+    "## List to store tuples of (DataFrame, file_type, file_name)\n",
     "dataframe_infos = []\n",
     "\n",
-    "# Extract data from all files\n",
+    "## Extract data from all files\n",
     "for file_path in iter_file_paths(DATA_dir):\n",
     "    file_name = os.path.basename(file_path)\n",
     "    base_name, ext = os.path.splitext(file_name)\n",
     "    \n",
     "    try:\n",
-    "        # Extract data based on file type\n",
+    "        ## Extract data based on file type\n",
     "        if ext.lower() == '.txt':\n",
     "            df = extract_dataframe_from_txt(file_path)\n",
     "            print(f\"Successfully extracted from text file: {file_name}\")\n",
-    "        elif ext.lower() in ['xls', '.xlsx']:\n",
+    "        elif ext.lower() in ['.xls', '.xlsx']:\n",
     "            df = extract_dataframe_from_excel(file_path)\n",
     "            print(f\"Successfully extracted from Excel file: {file_name}\")\n",
     "        else:\n",
     "            print(f\"Skipping unsupported file: {file_name}\")\n",
     "            continue\n",
     "        \n",
-    "        # Store the DataFrame with its metadata\n",
+    "        ## Store the DataFrame with its metadata\n",
     "        dataframe_infos.append((df, ext.lower(), base_name))\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {file_name}: {e}\")\n",
+    "print(dataframe_infos)\n",
     "\n",
-    "# Save all DataFrames to Excel files in the Extracted_Data directory\n",
+    "## Save all DataFrames to Excel files in the Extracted_Data directory\n",
     "for df, ext, base_name in dataframe_infos:\n",
     "    output_path = os.path.join(extracted_data_dir, f\"{base_name}.xlsx\")\n",
     "    try:\n",
