--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -194,15 +194,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully saved: ./DATA FILES/Extracted_Data/Ar76c.xlsx to Extracted_Data folder\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'./DATA FILES/Extracted_Data/Ar76c.xlsx'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## testing format of Ar76f.txt file\n",
+    "## testing format of Ar76c.txt file\n",
     "## Read the file and extract the DataFrame\n",
-    "file_path = './DATA FILES/Source_Data/Ar76f.txt'\n",
+    "file_path = './DATA FILES/Source_Data/Ar76c.txt'\n",
     "df = extract_dataframe_from_txt(file_path, _encoding='cp1252')\n",
-    "save_dataframe_to_excel(df, './DATA FILES/Extracted_Data/Ar76f.xlsx')"
+    "save_dataframe_to_excel(df, './DATA FILES/Extracted_Data/Ar76c.xlsx')"
    ]
   }
  ],
